--- a/src/GUI/ProfilePage.form
+++ b/src/GUI/ProfilePage.form
@@ -1,51 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.ProfilePage">
-  <grid id="27dc6" binding="profilePPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="-1">
+  <grid id="27dc6" binding="profilePPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1400" height="900"/>
+      <xy x="20" y="20" width="500" height="400"/>
     </constraints>
     <properties>
       <background color="-5131855"/>
-      <maximumSize width="1400" height="900"/>
-      <minimumSize width="1400" height="900"/>
-      <preferredSize width="1400" height="900"/>
     </properties>
     <border type="none"/>
     <children>
       <grid id="3b7ea" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="true">
-            <minimum-size width="1400" height="350"/>
-            <preferred-size width="1400" height="350"/>
-            <maximum-size width="1400" height="350"/>
-          </grid>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <alignmentX value="0.0"/>
-          <alignmentY value="0.0"/>
           <background color="-5131855"/>
         </properties>
         <border type="none"/>
         <children>
           <component id="51f8b" class="javax.swing.JButton" binding="profilePhotoButton">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                <minimum-size width="250" height="300"/>
-                <preferred-size width="250" height="300"/>
-                <maximum-size width="250" height="300"/>
-              </grid>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-6094769"/>
-              <borderPainted value="true"/>
-              <contentAreaFilled value="false"/>
-              <font size="20" style="1"/>
-              <foreground color="-1"/>
-              <horizontalTextPosition value="0"/>
-              <opaque value="true"/>
-              <rolloverEnabled value="false"/>
               <text value="Profile Photo"/>
             </properties>
           </component>
@@ -54,109 +33,79 @@
       <grid id="f8d0e" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="true">
-            <minimum-size width="1400" height="200"/>
-            <preferred-size width="1400" height="200"/>
-            <maximum-size width="1400" height="200"/>
-          </grid>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties>
-          <alignmentX value="0.0"/>
-          <alignmentY value="0.0"/>
-        </properties>
+        <properties/>
         <border type="none"/>
         <children>
-          <grid id="e7af" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
-            <margin top="0" left="300" bottom="0" right="300"/>
+          <grid id="e7af" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="true">
-                <minimum-size width="1400" height="200"/>
-                <preferred-size width="1400" height="200"/>
-                <maximum-size width="1400" height="200"/>
-              </grid>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-5131855"/>
-              <focusable value="false"/>
             </properties>
             <border type="none"/>
             <children>
-              <component id="cd48e" class="javax.swing.JLabel">
+              <component id="68458" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                    <minimum-size width="-1" height="95"/>
-                    <preferred-size width="-1" height="95"/>
-                    <maximum-size width="-1" height="95"/>
-                  </grid>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <font name="Verdana" size="20" style="1"/>
+                  <font size="18" style="1"/>
                   <foreground color="-6094769"/>
-                  <horizontalAlignment value="0"/>
-                  <horizontalTextPosition value="0"/>
-                  <text value="Email"/>
-                  <verticalAlignment value="0"/>
+                  <text value="Name - Surname"/>
+                </properties>
+              </component>
+              <component id="cd48e" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <font size="18" style="1"/>
+                  <foreground color="-6094769"/>
+                  <text value="e-mail"/>
                 </properties>
               </component>
               <component id="a5581" class="javax.swing.JLabel" binding="name">
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                    <minimum-size width="-1" height="95"/>
-                    <preferred-size width="-1" height="95"/>
-                    <maximum-size width="-1" height="95"/>
-                  </grid>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <font name="Verdana" size="20" style="1"/>
-                  <foreground color="-16768928"/>
-                  <horizontalAlignment value="0"/>
-                  <horizontalTextPosition value="4"/>
-                  <text value=""/>
+                  <font/>
+                  <foreground color="-16777216"/>
+                  <text value="Label"/>
                 </properties>
               </component>
               <component id="18ac7" class="javax.swing.JLabel" binding="email">
                 <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                    <minimum-size width="-1" height="95"/>
-                    <preferred-size width="-1" height="95"/>
-                    <maximum-size width="-1" height="95"/>
-                  </grid>
+                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <background color="-12501183"/>
-                  <font name="Verdana" size="20" style="1"/>
-                  <foreground color="-16768928"/>
-                  <text value=""/>
+                  <foreground color="-16777216"/>
+                  <text value="Label"/>
                 </properties>
               </component>
-              <component id="68458" class="javax.swing.JLabel">
+              <hspacer id="1772c">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                    <minimum-size width="-1" height="95"/>
-                    <preferred-size width="-1" height="95"/>
-                    <maximum-size width="-1" height="95"/>
-                  </grid>
+                  <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
-                <properties>
-                  <font name="Verdana" size="20" style="1"/>
-                  <foreground color="-6094769"/>
-                  <horizontalAlignment value="0"/>
-                  <horizontalTextPosition value="0"/>
-                  <text value="Name - Surname"/>
-                </properties>
-              </component>
+              </hspacer>
+              <hspacer id="fbfb5">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </hspacer>
             </children>
           </grid>
         </children>
       </grid>
       <grid id="ecdcc" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="25" left="300" bottom="0" right="175"/>
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="true">
-            <minimum-size width="-1" height="350"/>
-            <preferred-size width="-1" height="350"/>
-            <maximum-size width="-1" height="350"/>
-          </grid>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-5131855"/>
@@ -165,19 +114,14 @@
         <children>
           <component id="10ea" class="javax.swing.JButton" binding="changePasswordButton" default-binding="true">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                <minimum-size width="-1" height="50"/>
-                <preferred-size width="-1" height="50"/>
-                <maximum-size width="-1" height="50"/>
-              </grid>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-6094768"/>
               <borderPainted value="false"/>
               <contentAreaFilled value="false"/>
               <enabled value="true"/>
-              <focusPainted value="false"/>
-              <font name="Verdana" size="20" style="1"/>
+              <font size="18" style="1"/>
               <foreground color="-1"/>
               <opaque value="true"/>
               <text value="Change password"/>
