--- a/src/GUI/AddProductPage.form
+++ b/src/GUI/AddProductPage.form
@@ -42,9 +42,9 @@
               </grid>
             </constraints>
             <properties>
-              <background color="-5131855"/>
+              <background color="-6094769"/>
               <borderPainted value="true"/>
-              <contentAreaFilled value="true"/>
+              <contentAreaFilled value="false"/>
               <defaultCapable value="true"/>
               <doubleBuffered value="false"/>
               <enabled value="true"/>
@@ -151,18 +151,6 @@
               <text value="Title"/>
             </properties>
           </component>
-          <component id="a7ef1" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
-            <constraints>
-              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
-              </grid>
-            </constraints>
-            <properties>
-              <background color="-16768928"/>
-              <font size="20" style="1"/>
-              <foreground color="-1"/>
-            </properties>
-          </component>
           <component id="37140" class="javax.swing.JLabel">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
@@ -181,6 +169,18 @@
               <background color="-16768928"/>
               <font size="20" style="1"/>
               <foreground color="-16381681"/>
+            </properties>
+          </component>
+          <component id="a7ef1" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
+            <constraints>
+              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-16768928"/>
+              <font size="20" style="1"/>
+              <foreground color="-1"/>
             </properties>
           </component>
         </children>
