--- a/src/GUI/ProfilePage.form
+++ b/src/GUI/ProfilePage.form
@@ -67,7 +67,7 @@
         <border type="none"/>
         <children>
           <grid id="e7af" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
-            <margin top="0" left="300" bottom="0" right="300"/>
+            <margin top="0" left="200" bottom="0" right="300"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="true">
                 <minimum-size width="1400" height="200"/>
@@ -79,7 +79,7 @@
               <background color="-5131855"/>
               <focusable value="false"/>
             </properties>
-            <border type="none"/>
+            <border type="bevel-lowered"/>
             <children>
               <component id="cd48e" class="javax.swing.JLabel">
                 <constraints>
@@ -150,7 +150,7 @@
         </children>
       </grid>
       <grid id="ecdcc" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="25" left="300" bottom="0" right="175"/>
+        <margin top="25" left="175" bottom="0" right="175"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="true">
             <minimum-size width="-1" height="350"/>
